<resources>
    <string name="app_name">Maze-Runner</string>
    <string name="maze_runner">Maze Runner</string>
    <string name="right">→</string>
    <string name="down">↓</string>
    <string name="left">←</string>
    <string name="up">↑</string>
    <string name="easy">Easy</string>
    <string name="standard">Standard</string>
    <string name="difficult">Difficult</string>
    <string name="ultra_hard">Ultra Hard</string>
    <string name="select_difficulty_level">Select Difficulty Level</string>
    <string name="back">Back</string>
</resources>