<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/tv_title_Difficulty_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_difficulty_level"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_for_difficulty_buttons"/>

        <LinearLayout
            android:id="@+id/linear_layout_for_difficulty_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_title_Difficulty_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">



            <Button
                android:id="@+id/btnEasy"
                android:layout_marginBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/easy" />

            <Button
                android:id="@+id/btnStandard"
                android:layout_marginBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standard"
                android:textSize="25sp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btnDifficult"
                android:layout_marginBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/difficult" />

            <Button
                android:id="@+id/btnUltraHard"
                android:layout_marginBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/ultra_hard" />
        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>