<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_title_Maze_Runner"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_title_Maze_Runner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/maze_runner"
        android:textSize="35sp"
        android:paddingVertical="10sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <FrameLayout
        android:id="@+id/frame_layout_container_for_maze"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_Maze_Runner"
        app:layout_constraintBottom_toTopOf="@id/controlsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="253dp"
        android:layout_height="266dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Up Button -->
        <Button
            android:id="@+id/btnUp"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center"
            android:background="@drawable/round_button_background"
            android:text="@string/up"
            android:textSize="40sp" />

        <!-- Left and Right Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLeft"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:background="@drawable/round_button_background"
                android:gravity="center"
                android:text="@string/left"
                android:textSize="40sp" />

            <View
                android:layout_width="70sp"
                android:layout_height="70sp" />

            <Button
                android:id="@+id/btnRight"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:background="@drawable/round_button_background"
                android:gravity="center"
                android:text="@string/right"
                android:textSize="40sp" />
        </LinearLayout>
        <!-- Down Button -->
        <Button
            android:id="@+id/btnDown"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:background="@drawable/round_button_background"
            android:text="@string/down"
            android:textSize="40sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>